koboldtunnel: fix transitions

--- a/mod/area/ktunnel100.git.yml
+++ b/mod/area/ktunnel100.git.yml
@@ -1116,73 +1116,6 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -2.31494903564453}
-        PointY: {type: :float, value: 0.120731353759766}
-        PointZ: {type: :float, value: 8.77254581451416}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: -0.00890350341796875}
-        PointY: {type: :float, value: 0.0244240760803223}
-        PointZ: {type: :float, value: 8.80026245117188}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 8.80237197875977}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.0997276306152344}
-        PointY: {type: :float, value: 0.729475021362305}
-        PointZ: {type: :float, value: 8.58066272735596}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: -2.27045440673828}
-        PointY: {type: :float, value: 0.753434181213379}
-        PointZ: {type: :float, value: 8.58673286437988}
-    HighlightHeight: {type: :float, value: 0.0}
-    KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: drquarters2_ktunnel100}
-    LinkedToFlags: {type: :byte, value: 1}
-    LoadScreenID: {type: :word, value: 0}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14760
-      value: 
-        0: "Neuer Gebiets\xFCbergang"
-    OnClick: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    PortraitId: {type: :word, value: 0}
-    ScriptHeartbeat: {type: :resref, value: ""}
-    ScriptOnEnter: {type: :resref, value: ""}
-    ScriptOnExit: {type: :resref, value: ""}
-    ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: ktunnel100_drquarters2}
-    TemplateResRef: {type: :resref, value: newtransition}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :int, value: 1}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 36.1169}
-    YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 5.5166}
-    ZOrientation: {type: :float, value: 0.0}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    AutoRemoveKey: {type: :byte, value: 0}
-    Cursor: {type: :byte, value: 1}
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
         PointZ: {type: :float, value: 5.52500009536743}
@@ -1210,7 +1143,7 @@ TriggerList:
       type: :cexolocstr
       str_ref: 14760
       value: 
-        0: "Neuer Gebiets\xFCbergang"
+        0: ktunnel100_ktunnel101
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -1232,6 +1165,73 @@ TriggerList:
     XPosition: {type: :float, value: 42.9487}
     YOrientation: {type: :float, value: 0.0}
     YPosition: {type: :float, value: 99.9232}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -0.0142288208007812}
+        PointY: {type: :float, value: -1.21492099761963}
+        PointZ: {type: :float, value: 8.62008953094482}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 2.62771606445312}
+        PointY: {type: :float, value: -1.29135656356812}
+        PointZ: {type: :float, value: 8.72667026519775}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 2.73776626586914}
+        PointY: {type: :float, value: -0.0811295509338379}
+        PointZ: {type: :float, value: 8.35788154602051}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.02044677734375}
+        PointY: {type: :float, value: -0.030418872833252}
+        PointZ: {type: :float, value: 8.35685729980469}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 8.35616874694824}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: drquarters2_ktunnel100}
+    LinkedToFlags: {type: :byte, value: 1}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: 
+        0: ktunnel100_drquarters2
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: ktunnel100_drquarters2}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 33.6265}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 6.9463}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
 WaypointList: 
@@ -1258,10 +1258,10 @@ WaypointList:
     Tag: {type: :cexostr, value: WP_ktunnel100_drquarters2}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 35.0093}
+    XPosition: {type: :float, value: 34.9532}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 5.8933}
-    ZPosition: {type: :float, value: 8.7635}
+    YPosition: {type: :float, value: 7.5912}
+    ZPosition: {type: :float, value: 8.0065}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -1282,8 +1282,8 @@ WaypointList:
     MapNoteEnabled: {type: :byte, value: 0}
     Tag: {type: :cexostr, value: WP_ktunnel100_ktunnel101}
     TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 45.1128}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 99.412}
-    ZPosition: {type: :float, value: 5.525}
+    XOrientation: {type: :float, value: 0.0245}
+    XPosition: {type: :float, value: 45.1251}
+    YOrientation: {type: :float, value: -0.9997}
+    YPosition: {type: :float, value: 98.5737}
+    ZPosition: {type: :float, value: 5.4775}
