--- a/mod/area/ktunnel101.git.yml
+++ b/mod/area/ktunnel101.git.yml
@@ -867,8 +867,8 @@ TriggerList:
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14760
-      value: {}
-
+      value: 
+        0: ktunnel101_ktunnel100
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -929,8 +929,8 @@ TriggerList:
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14760
-      value: {}
-
+      value: 
+        0: ktunnel101_ktunnel102
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -978,10 +978,10 @@ WaypointList:
     Tag: {type: :cexostr, value: WP_ktunnel101_ktunnel100}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 45.0286}
+    XPosition: {type: :float, value: 45.0757}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 0.4119}
-    ZPosition: {type: :float, value: 5.525}
+    YPosition: {type: :float, value: 1.1421}
+    ZPosition: {type: :float, value: 5.5}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -1002,8 +1002,8 @@ WaypointList:
     MapNoteEnabled: {type: :byte, value: 0}
     Tag: {type: :cexostr, value: WP_ktunnel101_ktunnel102}
     TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 45.0431}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 99.5684}
-    ZPosition: {type: :float, value: 5.525}
+    XOrientation: {type: :float, value: -0.098}
+    XPosition: {type: :float, value: 45.1138}
+    YOrientation: {type: :float, value: -0.9952}
+    YPosition: {type: :float, value: 98.791}
+    ZPosition: {type: :float, value: 5.5}
