--- a/mod/area/ktunnel102.git.yml
+++ b/mod/area/ktunnel102.git.yml
@@ -608,7 +608,7 @@ TriggerList:
         PointZ: {type: :float, value: 8.36378192901611}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_triade_ktunnel102}
+    LinkedTo: {type: :cexostr, value: WP_triade_ktunnel102}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -670,7 +670,7 @@ TriggerList:
         PointZ: {type: :float, value: 5.52500009536743}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_ktunnel103_ktunnel102}
+    LinkedTo: {type: :cexostr, value: WP_ktunnel103_ktunnel102}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -727,8 +727,8 @@ WaypointList:
     XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 45.0221}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 0.5449}
-    ZPosition: {type: :float, value: 5.525}
+    YPosition: {type: :float, value: 1.4094}
+    ZPosition: {type: :float, value: 5.5}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -742,19 +742,19 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14817
       value: 
-        0: wp_ktunnel102_triade
+        0: WP_ktunnel102_triade
     MapNote: 
       type: :cexolocstr
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_ktunnel102_triade}
+    Tag: {type: :cexostr, value: WP_ktunnel102_triade}
     TemplateResRef: {type: :resref, value: nw_waypoint001}
     XOrientation: {type: :float, value: 0.0736}
-    XPosition: {type: :float, value: 45.1443}
+    XPosition: {type: :float, value: 44.9298}
     YOrientation: {type: :float, value: -0.9973}
-    YPosition: {type: :float, value: 62.7341}
-    ZPosition: {type: :float, value: 8.14}
+    YPosition: {type: :float, value: 61.211}
+    ZPosition: {type: :float, value: 7.6192}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -768,16 +768,16 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14817
       value: 
-        0: wp_ktunnel102_ktunnel103
+        0: WP_ktunnel102_ktunnel103
     MapNote: 
       type: :cexolocstr
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_ktunnel102_ktunnel103}
+    Tag: {type: :cexostr, value: WP_ktunnel102_ktunnel103}
     TemplateResRef: {type: :resref, value: nw_waypoint001}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 45.1924}
+    XPosition: {type: :float, value: 45.1654}
     YOrientation: {type: :float, value: -1.0}
-    YPosition: {type: :float, value: 99.2928}
+    YPosition: {type: :float, value: 98.7525}
     ZPosition: {type: :float, value: 5.5}
