--- a/mod/area/ktunnel104.git.yml
+++ b/mod/area/ktunnel104.git.yml
@@ -626,23 +626,80 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0359954833984375}
-        PointY: {type: :float, value: 2.38418579101562e-07}
+        PointX: {type: :float, value: -0.198379516601562}
+        PointY: {type: :float, value: -1.41054534912109}
+        PointZ: {type: :float, value: 7.98500061035156}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 3.88880157470703}
+        PointY: {type: :float, value: -1.48026275634766}
+        PointZ: {type: :float, value: 7.98500061035156}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 3.80385589599609}
+        PointY: {type: :float, value: -0.0890655517578125}
+        PointZ: {type: :float, value: 8.55559062957764}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 8.56928730010986}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_wiztwr_ktunnel104}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: 
+        0: ktunnel104_wiztwr
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: ktunnel104_wiztwr}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 73.2224}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 73.7766}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -0.0120620727539062}
+        PointY: {type: :float, value: -1.27798533439636}
         PointZ: {type: :float, value: 5.52500009536743}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 4.35556793212891}
-        PointY: {type: :float, value: -0.191980838775635}
+        PointX: {type: :float, value: 4.47294616699219}
+        PointY: {type: :float, value: -1.27798533439636}
         PointZ: {type: :float, value: 5.52500009536743}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 4.35556793212891}
-        PointY: {type: :float, value: -1.15188550949097}
-        PointZ: {type: :float, value: 5.52500009536743}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.0360031127929688}
-        PointY: {type: :float, value: -1.15188503265381}
+        PointX: {type: :float, value: 4.47294616699219}
+        PointY: {type: :float, value: -0.0723388195037842}
         PointZ: {type: :float, value: 5.52500009536743}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
@@ -677,71 +734,9 @@ TriggerList:
     TrapType: {type: :byte, value: 0}
     Type: {type: :int, value: 1}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 72.8244}
+    XPosition: {type: :float, value: 72.7959}
     YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 1.2342}
-    ZOrientation: {type: :float, value: 0.0}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    AutoRemoveKey: {type: :byte, value: 0}
-    Cursor: {type: :byte, value: 1}
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: -0.198379516601562}
-        PointY: {type: :float, value: -1.41054534912109}
-        PointZ: {type: :float, value: 7.98500061035156}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 3.88880157470703}
-        PointY: {type: :float, value: -1.48026275634766}
-        PointZ: {type: :float, value: 7.98500061035156}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 3.80385589599609}
-        PointY: {type: :float, value: -0.0890655517578125}
-        PointZ: {type: :float, value: 8.55559062957764}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 8.56928730010986}
-    HighlightHeight: {type: :float, value: 0.0}
-    KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_wiztwr_ktunnel104}
-    LinkedToFlags: {type: :byte, value: 2}
-    LoadScreenID: {type: :word, value: 0}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14760
-      value: 
-        0: ktunnel104_wiztwr
-    OnClick: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    PortraitId: {type: :word, value: 0}
-    ScriptHeartbeat: {type: :resref, value: ""}
-    ScriptOnEnter: {type: :resref, value: ""}
-    ScriptOnExit: {type: :resref, value: ""}
-    ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: ktunnel104_wiztwr}
-    TemplateResRef: {type: :resref, value: newtransition}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :int, value: 1}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 73.2224}
-    YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 73.7766}
+    YPosition: {type: :float, value: 1.3786}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
 WaypointList: 
@@ -768,9 +763,9 @@ WaypointList:
     Tag: {type: :cexostr, value: WP_ktunnel104_ktunnel103}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 74.9961}
+    XPosition: {type: :float, value: 74.9479}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 0.6502}
+    YPosition: {type: :float, value: 1.5063}
     ZPosition: {type: :float, value: 5.5}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
@@ -785,13 +780,13 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14817
       value: 
-        0: wp_ktunnel104_wiztwr
+        0: WP_ktunnel104_wiztwr
     MapNote: 
       type: :cexolocstr
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_ktunnel104_wiztwr}
+    Tag: {type: :cexostr, value: WP_ktunnel104_wiztwr}
     TemplateResRef: {type: :resref, value: nw_waypoint001}
     XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 75.122}
