--- a/mod/area/castletimrap.git.yml
+++ b/mod/area/castletimrap.git.yml
@@ -181,30 +181,5 @@ TriggerList:
 
 WaypointList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14817
-      value: {}
-
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_darkness_exit}
-    TemplateResRef: {type: :resref, value: nw_waypoint001}
-    XOrientation: {type: :float, value: 1.0}
-    XPosition: {type: :float, value: 18.6445}
-    YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 39.745}
-    ZPosition: {type: :float, value: 0.4}
