--- a/mod/area/gabel_festung.are.yml
+++ b/mod/area/gabel_festung.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 1}
 Name: 
   type: :cexolocstr
   value: 
-    0: An der Gabel - Festung der Legion
+    0: "An der Gabel - S\xFCdtor"
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_outside}
 OnExit: {type: :resref, value: _area_leave}
