--- a/mod/utc/koboldschamane.utc.yml
+++ b/mod/utc/koboldschamane.utc.yml
@@ -143,20 +143,7 @@ IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
 ItemList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    Dropable: {type: :byte, value: 1}
-    InventoryRes: {type: :resref, value: herb027}
-    Repos_PosX: {type: :word, value: 0}
-    Repos_Posy: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    Dropable: {type: :byte, value: 1}
-    InventoryRes: {type: :resref, value: it_mpotion003}
-    Pickpocketable: {type: :byte, value: 1}
-    Repos_PosX: {type: :word, value: 1}
-    Repos_Posy: {type: :word, value: 0}
+  value: []
 LastName: 
   type: :cexolocstr
   value: 
