Gabel Sharess: AT to suc temple, exterior + interior changes
* added transition from gabel_sharess to succubus_temple
* added fancy stuff to gabel_sharess exterior in gabel_west
* changed minor stuff in interior gabel_sharess

--- a/mod/area/succubus_temple.git.yml
+++ b/mod/area/succubus_temple.git.yml
@@ -170,8 +170,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: sharess_2_suctemple}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -198,7 +198,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1013}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: CTP_StoneDoor_20n0}
+    Tag: {type: :cexostr, value: suctemple_2_sharess}
     TemplateResRef: {type: :resref, value: ctp_door_20n0}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -6040,7 +6040,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1329}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
