Gabel Versteck: fix broken AT, fix DCs, fix plot flags, fix key tags

--- a/mod/area/gabel_hideout.git.yml
+++ b/mod/area/gabel_hideout.git.yml
@@ -340,7 +340,7 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -0.0}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 40}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 20}
     Description: 
@@ -355,7 +355,7 @@ Door List:
     HP: {type: :short, value: 20}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
+    KeyName: {type: :cexostr, value: key_gabel_hideout}
     KeyRequired: {type: :byte, value: 0}
     LinkedTo: {type: :cexostr, value: gabel_n_2_gabel_hideout}
     LinkedToFlags: {type: :byte, value: 1}
@@ -365,8 +365,8 @@ Door List:
       str_ref: 14453
       value: 
         0: Strong Door 02d
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -381,11 +381,11 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 28}
+    OpenLockDC: {type: :byte, value: 40}
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 600}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: Gabel_Nordtor_hideout}
+    Tag: {type: :cexostr, value: gabel_hideout_2_gabel_n}
     TemplateResRef: {type: :resref, value: ctp_door_02d}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
