--- a/mod/area/gabel_nord.git.yml
+++ b/mod/area/gabel_nord.git.yml
@@ -2333,7 +2333,7 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: 3.1416}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 40}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
     Description: 
@@ -2953,19 +2953,20 @@ Door List:
     DisarmDC: {type: :byte, value: 0}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 5}
-    GenericType_New: {type: :dword, value: 0}
+    GenericType_New: {type: :dword, value: 209}
     HP: {type: :short, value: 10}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: xyz}
-    KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    KeyName: {type: :cexostr, value: key_gabel_hideout}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: gabel_hideout_2_gabel_n}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
-      value: {}
-
+      value:
+        0: ""
+        4: ""
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -3014,19 +3015,19 @@ Door List:
     DisarmDC: {type: :byte, value: 0}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 5}
-    GenericType_New: {type: :dword, value: 209}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 10}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: xyz}
-    KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: Gabel_Nordtor_hideout}
-    LinkedToFlags: {type: :byte, value: 1}
+    KeyRequired: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: ""}
+    LinkedToFlags: {type: :byte, value: 0}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
-      value:
-        4: ""
+      value: {}
+
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -3227,7 +3228,7 @@ Door List:
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 40}
-    Plot: {type: :byte, value: 1}
+    Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 558}
     Ref: {type: :byte, value: 0}
     Tag: {type: :cexostr, value: gabel_n_2_gabel_hideout}
